--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbyK8PA_95V-6FmClwfjBjlIfS3-xBVQ8c1KTAEK96cRIYuBluzeVKst_TLsgwgQQgW_Gw/exec";
 
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);// obtiene los datos de despues de "K="
