--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <style>
       body {
-        background-color: lightblue;
+        background-color: blue;
         text-align: center;
       }
       
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbxmpr9PrhxFm-BDq7RZ1X6ytsxBC-m72oMHNnaJlEJ33Sm1MQsPZtcgItdbsIhMYSgYdA/exec";
+    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbyK8PA_95V-6FmClwfjBjlIfS3-xBVQ8c1KTAEK96cRIYuBluzeVKst_TLsgwgQQgW_Gw/exec";
     
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
